<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.company</groupId>
  <artifactId>fx-app</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>fx-app</name>
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.4.1</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>

        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>

        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <compileSourceRoots>
              <compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
            </compileSourceRoots>

            <compilerArgs>
              <arg>--module-path</arg>
              <arg>${env.PATH_TO_FX}</arg>
              <arg>--add-modules</arg>
              <arg>javafx.controls</arg>
            </compilerArgs>

            <compilerId>javac</compilerId>
            <debug>true</debug>
            <outputDirectory>${project.basedir}/target/classes</outputDirectory>
          </configuration>
        </plugin>

        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.4.1</version>
            <configuration>
                <executable>java</executable>
                <arguments>
                    <!--
                     Set the class paths
                     ===================

                     <classpath/>: this will generate the classpath for us.

                     Please note that you could set the option more than once in order to add additional class paths.
                     -->
                    <argument>--class-path</argument>  
                    <classpath/>

                    <!--
                      Set paths to JavaFX modules
                      ===========================

                      <modulepath/>: automatically creates the modulepath using all project
                                     dependencies, also adding the project build directory.
                    -->
                    <argument>--module-path</argument>
                    <modulepath/> <!-- useless for this use case, but use it because it shows that we can set the option more than once -->
                    <argument>--module-path</argument>
                    <argument></argument> <!-- please note the "empty" <argument></argument>. -->
                    <argument>${env.PATH_TO_FX}</argument>

                    <argument>--add-modules</argument>
                    <argument>javafx.controls</argument>
                    <argument>org.company.App</argument>
                </arguments>
            </configuration>

        </plugin>

        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>

        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>

      </plugins>
    </pluginManagement>
  </build>
</project>
